# cc-plugin-wcrp

./: .gitignore  Dockerfile  README.md  consistency_sfcWind_Amon_MIROC6.json  mkdocs.yml  pyproject.toml
_site/: requirements.txt  sortie_pr.json  sortie_sfc.json  sortie_tas.json
_site/checks/attribute_checks/: check_attribute_suite.py
_site/checks/consistency_checks/: check_attributes_match_filename.py  check_drs_consistency.py  check_drs_filename_cv.py  check_experiment_consistency.py  check_frequency_table_consistency.py  check_institution_source_consistency.py  check_variant_label_consistency.py
_site/checks/data_plausibility_checks/: check_fill_missing.py  outliers_thresholds.json
_site/checks/dimension_checks/: check_dimension_existence.py  check_dimension_positive.py  check_dimension_size.py
_site/checks/time_checks/: check_time_bounds.py
_site/checks/variable_checks/: check_bounds_value_consistency.py  check_data_types.py  check_variable_existence.py  check_variable_shape_vs_dimensions.py
_site/ci/requirements/: environment.yml
_site/docs/: credits.md  wcrp_plugins.md
_site/tests/wcrp_cmip6_test_checks/: mapping.toml  test_check_attribute_suite.py  test_check_attributes_match_filename.py  test_check_bounds_value_consistency.py  test_check_dimension_existence.py  test_check_dimension_positive.py  test_check_dimension_size.py  test_check_drs_consistency.py  test_check_drs_filename_cv.py  test_check_experiment_consistency.py  test_check_frequency_table_consistency.py  test_check_institution_source_consistency.py  test_check_time_bounds.py  test_check_time_range_vs_filename.py  test_check_variant_label_consistency.py  test_variable_existence.py  test_variable_shape_vs_dimensions.py
checks/: utils.py
checks/attribute_checks/: check_attribute_cv.py  check_attribute_suite.py  check_attrs_cordex_cmip6.py
checks/consistency_checks/: check_drs_filename_cv.py  check_frequency_table_consistency.py  check_institution_source_consistency.py
checks/coordinate_checks/: check_bounds_contiguity.py  check_bounds_monotonicity.py  check_data_within_actual_range.py  check_fill_value_equals.py  check_no_nan_inf.py  check_strictly_positive.py  check_value_range.py  check_values_within_bounds.py  check_var_attributes.py  check_var_existence.py  check_var_shape.py  check_var_type.py
checks/data_plausibility_checks/: __init__.py  check_chunk_size.py  check_constant.py  check_fill_missing.py  check_nan_inf.py  check_spatial_statistical_outliers.py  detect_physically_impossible_outlier.py  outliers_thresholds.json
checks/data_plausibility_checks/utils/: auxiliar.py  data.py
checks/format_checks/: check_compression.py  check_format.py
checks/time_checks/: check_time_calendar.py  check_time_cordex_cmip6.py  check_time_range_vs_filename.py  check_time_squareness.py  time_constants.py
checks/variable_checks/: check_bounds_contiguity.py  check_bounds_monotonicity.py  check_coords_cordex_cmip6.py  check_data_within_actual_range.py  check_fill_value_equals.py  check_no_nan_inf.py  check_strictly_positive copy.py  check_strictly_positive.py  check_value_range.py  check_values_within_bounds.py  check_var_attributes.py  check_var_existence.py  check_var_shape.py  check_var_type.py  check_variable_type.py
docs/: cf_plugin.md  checks.md  credits.md  index.md  installation.md  reporting.md  usage.md  wcrp_plugins.md
plugins/: _version.py  base.py  wcrp_base.py
plugins/cmip6/: cmip6.py
plugins/cmip6/resources/: wcrp_config.toml
plugins/cmip7/: cmip7.py
plugins/cmip7/resources/: mapping_variables.toml  wcrp_config.toml
plugins/cordex_cmip6/: cordex_cmip6.py
plugins/data_plausibility/: wcrp_data.py
site/: 404.html  index.html  sitemap.xml
site/cf_feature_parity_matrix/: index.html
site/cf_plugin/: index.html
site/checks/: index.html
site/credits/: index.html
site/installation/: index.html
site/reporting/: index.html
site/search/: search_index.json
site/usage/: index.html
site/wcrp_plugins/: index.html
tests/wcrp_cmip6_test_checks/: test_check_bounds_contiguity.py  test_check_bounds_monotonicity.py  test_check_data_within_actual_range.py  test_check_fill_value_equals.py  test_check_no_nan_inf.py  test_check_strictly_positive.py  test_check_value_range.py  test_check_values_within_bounds.py  test_check_var_attributes.py  test_check_var_existence.py  test_check_var_shape.py  test_check_var_type.py  test_grid_detection.py
wcrp_plugins.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+5 files in other folders)
