[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "wcrp_plugins"
description = "This IOO Compliance-Checker plugins checks compliance with WCRP Projects specifications "
readme = "README.md"
keywords = ["compliance checker", "plugin", "wcrp", "cmip6"]
license = {file = "LICENSE"}
authors = [
  { name = "Ayoub Nachite", email = "anachite@ipsl.fr" },
  { name = "Martin Schupfner", email = "schupfner@dkrz.de" },
  { name = "Javier Diez-Sierra", email = "javier.diez@unican.es" },
  { name = "GHAZALI Iliana", email = "liana.ghazali@meteo.fr" },
]
maintainers = [{name = "Ayoub Nachite", email = "anachite@ipsl.fr"}]
requires-python = ">=3.10"
dependencies = [
  "compliance-checker>=5.1.2",
  "netCDF4",
  "xarray",
  "pandas",
  "cftime",
  "toml"
]
dynamic = ["version"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Archiving",
]

[project.urls]
Homepage = "https://github.com/ESGF/cc-plugin-wcrp" 
"Bug Tracker" = "https://github.com/ESGF/cc-plugin-wcrp" 


[project.entry-points."compliance_checker.suites"]
plugin_cmip6 = "plugins.cmip6.cmip6:Cmip6ProjectCheck"


[tool.setuptools_scm]
fallback_version = "0.0.0"
write_to = "plugins/_version.py"

[tool.setuptools.packages.find]
include = ["plugins*", "checks*"]
