[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-plugin-wcrp"
description = "This IOOS Compliance-Checker plugins checks compliance with WCRP Projects specifications "
readme = "README.md"
keywords = ["compliance checker", "plugin", "wcrp", "cmip6", "cordex_cmip6"]
license = {file = "LICENSE"}
authors = [
  { name = "Ayoub Nachite", email = "anachite@ipsl.fr" },
  { name = "Martin Schupfner", email = "schupfner@dkrz.de" },
  { name = "Javier Diez-Sierra", email = "javier.diez@unican.es" },
  { name = "Rubén García Macho", email = "rubengm@ifca.unican.es" },
  { name = "Adrian Chantreux", email = "chantreux@ifca.unican.es" }
]
maintainers = [{name = "Ayoub Nachite", email = "anachite@ipsl.fr"}]
requires-python = ">=3.10"
dependencies = [
  "compliance-checker>=5.1.2",
  "netCDF4",
  "xarray",
  "pandas",
  "cftime",
  "toml",
  "cf_xarray",
  "esgvoc",
  "pooch"
]
dynamic = ["version"]

[project.entry-points."compliance_checker.suites"]
plugin_cmip6 = "plugins.cmip6.cmip6:Cmip6ProjectCheck"
plugin_cc6 = "plugins.cordex_cmip6.cordex_cmip6:CordexCmip6ProjectCheck"

[tool.setuptools_scm]
fallback_version = "0.0.0"
write_to = "plugins/_version.py"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
include = ["plugins*", "checks*"]
