[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-plugin-wcrp"
description = "This IOOS Compliance-Checker plugins checks compliance with WCRP Projects specifications "
readme = "README.md"
keywords = ["compliance checker", "plugin", "wcrp", "cmip6", "cordex_cmip6"]
license = {file = "LICENSE"}
authors = [
  { name = "Ayoub Nachite", email = "anachite@ipsl.fr" },
  { name = "Martin Schupfner", email = "schupfner@dkrz.de" },
  { name = "Javier Diez-Sierra", email = "javier.diez@unican.es" },
  { name = "Rubén García Macho", email = "rubengm@ifca.unican.es" },
  { name = "Adrian Chantreux", email = "chantreux@ifca.unican.es" }
]
maintainers = [{name = "Ayoub Nachite", email = "anachite@ipsl.fr"}]
requires-python = ">=3.10"
dependencies = [
  "compliance-checker>=5.1.2",
  "netCDF4",
  "xarray",
  "pandas",
  "cftime",
  "toml",
  "cf_xarray",
  "esgvoc",
  "pooch"
]
version = "1.0.2"

[project.entry-points."compliance_checker.suites"]
plugin_cmip6 = "plugins.cmip6.cmip6:Cmip6ProjectCheck"
plugin_cc6 = "plugins.cordex_cmip6.cordex_cmip6:CordexCmip6ProjectCheck"
plugin_cmip7 = "plugins.cmip7.cmip7:Cmip7ProjectCheck"
plugin_data = "plugins.data_plausibility.data_plugin:DatapluginProjectCheck"
[tool.setuptools.packages.find]
include = ["plugins*", "checks*"]
